# dracon-libs

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  flake.nix
contracts/crates/ai/dracon-ai-contracts/: Cargo.toml
contracts/crates/ai/dracon-ai-contracts/src/: lib.rs
contracts/crates/ai/dracon-ai-runtime-contracts/: Cargo.toml
contracts/crates/ai/dracon-ai-runtime-contracts/src/: lib.rs  models.rs  traits.rs
contracts/crates/dracon-memory-contracts/: Cargo.toml
contracts/crates/dracon-memory-contracts/src/: lib.rs
services/crates/ai/ai-lib/: Cargo.toml  README.md
services/crates/ai/ai-lib/src/: error.rs  lib.rs  types.rs
services/crates/ai/ai-lib/src/providers/: anthropic.rs  google.rs  minimax.rs  mod.rs  openai.rs
services/crates/ai/ai-lib/tests/: anthropic.rs  integration.rs
services/crates/ai/ai-models-catalog/: Cargo.toml  README.md
services/crates/ai/ai-models-catalog/src/: catalog.rs  config.rs  env.rs  lib.rs
services/crates/ai/ai-models-catalog/tests/: catalog.rs
services/crates/ai/ai-routing-runtime/: Cargo.toml  README.md
services/crates/ai/ai-routing-runtime/examples/: basic.rs
services/crates/ai/ai-routing-runtime/src/: lib.rs  routing.rs  traits.rs
services/crates/ai/ai-runtime-adapters/: Cargo.toml  README.md
services/crates/ai/ai-runtime-adapters/examples/: basic.rs
services/crates/ai/ai-runtime-adapters/src/: lib.rs
services/crates/ai/ai-runtime-config/: Cargo.toml  README.md
services/crates/ai/ai-runtime-config/examples/: basic.rs
services/crates/ai/ai-runtime-config/src/: lib.rs
services/crates/ai/ai-service/: Cargo.toml  README.md
services/crates/ai/ai-service/examples/: basic.rs
services/crates/ai/ai-service/src/: lib.rs
tools/files/dracon-files/: Cargo.toml  README.md
tools/files/dracon-files/examples/: basic.rs
tools/files/dracon-files/src/: contracts.rs  lib.rs
tools/media/dracon-stt-runtime/: Cargo.toml  README.md  download_models.sh
tools/media/dracon-stt-runtime/src/: lib.rs  parakeet.rs  stt_contracts.rs  vad_state.rs  whisper.rs
tools/media/dracon-tts-runtime/: Cargo.toml  README.md  download_models.sh
tools/media/dracon-tts-runtime/examples/: gen_samples.rs  kitten_voice_compare.rs  kitten_voice_test.rs  test_extended.rs
tools/media/dracon-tts-runtime/src/: contracts.rs  kitten.rs  kokoro.rs  lib.rs
tools/media/dracon-video-runtime/: Cargo.toml  README.md
tools/media/dracon-video-runtime/src/: lib.rs
tools/media/dracon-video-runtime/src/exporter/: ass.rs  chapters.rs  mod.rs  srt.rs
tools/media/dracon-video-runtime/src/protocol/: audio.rs  mod.rs  transcript.rs  video.rs
tools/media/dracon-video-runtime/src/runtime/: ffmpeg.rs  loudnorm.rs  ml.rs  mod.rs  trim.rs  whisper.rs
tools/memory/dracon-memory-runtime/: Cargo.toml  README.md
tools/memory/dracon-memory-runtime/src/: db.rs  embedder.rs  lib.rs  memory_contracts.rs
tools/sync/dracon-git/: Cargo.toml  README.md
tools/sync/dracon-git/src/: cli.rs  contracts.rs  dracon_sync_commit.rs  error.rs  intent.rs  lib.rs  task_scan.rs  types.rs
tools/sync/dracon-git/tests/: integration.rs
tools/system/dracon-system/: Cargo.toml  README.md
tools/system/dracon-system/examples/: search_nix.rs
tools/system/dracon-system/src/: contracts.rs  lib.rs  monitor.rs  notification.rs  remote.rs  storage.rs
tools/tui/dracon-terminal-engine/: AI_GUIDE.md  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
tools/tui/dracon-terminal-engine/.github/workflows/: ci.yml
tools/tui/dracon-terminal-engine/examples/: demo.rs  framework_chat.rs  framework_demo.rs  framework_file_manager.rs  framework_widgets.rs  menu_demo.rs  modal_demo.rs  showcase.rs  tabbed_panels.rs  text_editor.rs  text_editor_demo.rs  theme_switcher.rs  widget_gallery.rs  widget_tutorial.rs
tools/tui/dracon-terminal-engine/examples/_apps/: chat_client.rs  dashboard_builder.rs  file_manager.rs  system_monitor.rs
tools/tui/dracon-terminal-engine/examples/_cookbook/: command_bindings.rs  data_table.rs  debug_overlay.rs  log_monitor.rs  menu_system.rs  split_resizer.rs  tabbed_panels.rs  tree_navigator.rs  widget_gallery.rs
tools/tui/dracon-terminal-engine/src/: contracts.rs  layout.rs  lib.rs  system.rs  utils.rs
tools/tui/dracon-terminal-engine/src/backend/: mod.rs  tty.rs
tools/tui/dracon-terminal-engine/src/compositor/: engine.rs  filter.rs  mod.rs  plane.rs
tools/tui/dracon-terminal-engine/src/core/: terminal.rs
tools/tui/dracon-terminal-engine/src/framework/: animation.rs  app.rs  command.rs  dirty_regions.rs  dragdrop.rs  event_dispatcher.rs  focus.rs  hitzone.rs  layout.rs  mod.rs  scroll.rs  sixel.rs  theme.rs  widget.rs  widget_container.rs
tools/tui/dracon-terminal-engine/src/framework/widgets/: breadcrumbs.rs  button.rs  checkbox.rs  confirm_dialog.rs  context_menu.rs  debug_overlay.rs  event_logger.rs  form.rs  gauge.rs  hud.rs  key_value_grid.rs  label.rs  list.rs  log_viewer.rs  menu_bar.rs  mod.rs  modal.rs  password_input.rs  profiler.rs  progress_bar.rs  radio.rs  search_input.rs  select.rs  slider.rs  spinner.rs  split.rs  status_badge.rs  status_bar.rs  streaming_text.rs  table.rs  (+8 more)
tools/tui/dracon-terminal-engine/src/input/: async_reader.rs  event.rs  mapping.rs  mod.rs  parser.rs
tools/tui/dracon-terminal-engine/src/integration/: ratatui.rs
tools/tui/dracon-terminal-engine/src/visuals/: assets.rs  mod.rs
tools/tui/dracon-terminal-engine/src/widgets/: editor.rs  input.rs
tools/tui/dracon-terminal-engine/tests/: app_tick_test.rs  async_command_runner_test.rs  button_test.rs  command_output_test.rs  compositor_test.rs  context_menu_test.rs  dragdrop_test.rs  editor_smoke_test.rs  event_handler_test.rs  filter_test.rs  hitzone_test.rs  label_test.rs  layout_test.rs  multi_widget_test.rs  password_input_test.rs  resize_test.rs  scroll_test.rs  terminal_test.rs  text_editor_adapter_edge_test.rs  text_editor_adapter_test.rs  text_editor_edge_test.rs  text_editor_test.rs  text_input_test.rs  theme_propagation_test.rs  utils_test.rs  visuals_test.rs  widget_color_test.rs  widget_container_test.rs  widget_test.rs
(+19 files in other folders)
