[workspace]
resolver = "2"
members = [
  # Tools (public, reusable)
  "tools/tui/dracon-terminal-engine",
  "tools/sync/dracon-git",
  "tools/system/dracon-system",
  "tools/media/dracon-tts-runtime",
  "tools/media/dracon-stt-runtime",
  "tools/media/dracon-video-runtime",
  "tools/memory/dracon-memory-runtime",
]

[workspace.package]
version = "11.1.4"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
regex = "1"
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util"] }