[package]
name = "dracon-memory-contracts"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
authors = ["Dracon <dracon@void>"]
repository = "https://github.com/DraconDev/dracon-libs"
description = "Trait contracts for the memory runtime: MemoryStore and TextEmbedder traits"

[dependencies]
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
anyhow = "1"

[lib]
name = "dracon_memory_contracts"
path = "src/lib.rs"
