[package]
name = "dracon-files"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords = ["filesystem", "files", "catalog", "search"]
categories = ["filesystem", "command-line-utilities"]

[dependencies]
walkdir = "2.5"
mime_guess = "2.0"
serde = { workspace = true }

[dev-dependencies]
tempfile = "3"
