[package]
name = "dracon-video-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords = ["video", "ffmpeg", "whisper", "ml", "automation"]
categories = ["multimedia::video", "audio"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = "1.1"
directories = "6.0"
hf-hub = "0.5"
image = "0.25"
rand = "0.10"
walkdir = "2.5"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.23"
tract-onnx = "0.21"

[dev-dependencies]
tempfile = "3"

[features]
default = []
ffmpeg = []
