[package]
name = "dracon-memory-runtime"
version.workspace = true
edition.workspace = true
description = "Memory system runtime - SQLite + ONNX embeddings for conversation storage and semantic search"

[dependencies]
anyhow = { workspace = true }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
rusqlite = { version = "0.32", features = [] }
sqlite-vec = "0.1"
chrono = { workspace = true }
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17"
tokenizers = "0.19"
tracing = "0.1"

[lib]
name = "dracon_memory_runtime"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
