[package]
name = "dracon-memory-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros"] }
rusqlite = { version = "0.32", features = [] }
sqlite-vec = "0.1"
chrono = { workspace = true }
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17"
tokenizers = "0.19"
tracing = { workspace = true }

[lib]
name = "dracon_memory_runtime"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
