[package]
name = "dracon-git"
version.workspace = true
edition.workspace = true
description = "Git capability adapters and deterministic commit payload helpers"

[dependencies]
git2 = "0.18"
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
