[package]
name = "dracon-system"
version = "0.3.0"
edition.workspace = true
description = "System diagnostics and remote execution capability adapters"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
notify-rust = "4.11"
sysinfo = "0.32"
dirs = "6.0"
walkdir = "2.5"
ssh2 = "0.9"
libc = "0.2"
