[package]
name = "dracon-system"
version.workspace = true
license = "MIT OR Apache-2.0"
authors = ["Dracon <dracon@void>"]
repository = "https://github.com/DraconDev/dracon-libs"
description = "System diagnostics, SSH remote execution, and notification adapters"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
notify-rust = "4.11"
sysinfo = "0.32"
dirs = "6.0"
walkdir = "2.5"
ssh2 = "0.9"
libc = "0.2"
