[package]
name = "dracon-system-lib"
version.workspace = true
license = "AGPL-3.0-only"
authors = ["Dracon <dracon@void>"]
repository = "https://github.com/DraconDev/dracon-libs"
description = "System diagnostics, SSH remote execution, and notification adapters"
edition.workspace = true

[features]
default = []
unsafe-remote-shell = []

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
notify-rust = "4.17"
sysinfo = "0.39"
dirs = "6.0"
walkdir = "2.5"
ssh2 = "0.9"
libc = "0.2"
