[package]
name = "dracon-ai-contracts"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
authors = ["Dracon <dracon@void>"]
repository = "https://github.com/DraconDev/dracon-libs"
description = "AI routing contracts: RoutingTask, SelectionConstraints, and ServiceLevel"

[dependencies]
serde = { version = "1", features = ["derive"] }

[lib]
name = "dracon_ai_contracts"
path = "src/lib.rs"
