[package]
name = "dracon-ai-runtime-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
dracon-ai-contracts = { path = "../dracon-ai-contracts" }

[lib]
name = "dracon_ai_runtime_contracts"
path = "src/lib.rs"
