[package]
name = "dracon-ai-runtime-contracts"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
authors = ["Dracon <dracon@void>"]
repository = "https://github.com/DraconDev/dracon-libs"
description = "AI runtime contracts: ChatMessage, ChatRequest, and AiProvider trait"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
dracon-ai-contracts = { path = "../dracon-ai-contracts" }

[lib]
name = "dracon_ai_runtime_contracts"
path = "src/lib.rs"
