[package]
name = "ai-lib"
description = "Super-simple Rust client for direct AI provider access. Bring your own keys."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = true

[dependencies]
ai-models-catalog = { path = "../ai-models-catalog" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1"
async-trait = "0.1"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
httpmock = "0.7"
