[package]
name = "ai-routing-runtime"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
authors = ["Dracon <dracon@void>"]
repository = "https://github.com/DraconDev/dracon-libs"
description = "AI routing runtime with SmartRouter and ProviderRegistry for model selection"

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
dracon-ai-contracts = { path = "../../../../contracts/crates/ai/dracon-ai-contracts" }
dracon-ai-runtime-contracts = { path = "../../../../contracts/crates/ai/dracon-ai-runtime-contracts" }

[lib]
name = "ai_routing_runtime"
path = "src/lib.rs"
