[package]
name = "ai-routing-runtime"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
authors = ["Dracon <dracon@void>"]
repository = "https://github.com/DraconDev/dracon-libs"
description = "AI routing runtime with SmartRouter and ProviderRegistry for model selection"

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
dracon-ai-contracts = { path = "../../../../contracts/crates/ai/dracon-ai-contracts" }
dracon-ai-runtime-contracts = { path = "../../../../contracts/crates/ai/dracon-ai-runtime-contracts" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lib]
name = "ai_routing_runtime"
path = "src/lib.rs"
