[package]
name = "ai-runtime-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
dracon-ai-runtime-contracts = { path = "../../../../contracts/crates/ai/dracon-ai-runtime-contracts" }

[lib]
name = "ai_runtime_adapters"
path = "src/lib.rs"
