[package]
name = "ai-runtime-adapters"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
authors = ["Dracon <dracon@void>"]
repository = "https://github.com/DraconDev/dracon-libs"
description = "AI runtime adapters: GenericOpenAIAdapter for OpenAI-compatible API endpoints"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
dracon-ai-runtime-contracts = "94.7"

[lib]
name = "ai_runtime_adapters"
path = "src/lib.rs"
