[package]
name = "ai-runtime-config"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
authors = ["Dracon <dracon@void>"]
repository = "https://github.com/DraconDev/dracon-libs"
description = "AI runtime configuration types: OpenAIProviderSpec and AiRuntimeConfig"

[dependencies]
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }

[lib]
name = "ai_runtime_config"
path = "src/lib.rs"
