[package]
name = "ai-runtime-config"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
authors = ["Dracon <dracon@void>"]
repository = "https://github.com/DraconDev/dracon-libs"
description = "AI runtime configuration types: OpenAIProviderSpec and AiRuntimeConfig"

[dependencies]
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }

[lib]
name = "ai_runtime_config"
path = "src/lib.rs"
