[package]
name = "ai-service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dracon-ai-contracts = { path = "../../../../contracts/crates/ai/dracon-ai-contracts" }
dracon-ai-runtime-contracts = { path = "../../../../contracts/crates/ai/dracon-ai-runtime-contracts" }

[lib]
name = "ai_service"
path = "src/lib.rs"
