[package]
name = "ai-service"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
authors = ["Dracon <dracon@void>"]
repository = "https://github.com/DraconDev/dracon-libs"
description = "AI service layer with provider registry, policy management, and runtime routing"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { workspace = true, features = ["stream"] }
dracon-ai-contracts = { path = "../../../../contracts/crates/ai/dracon-ai-contracts" }
dracon-ai-runtime-contracts = { path = "../../../../contracts/crates/ai/dracon-ai-runtime-contracts" }
ai-routing-runtime = { path = "../ai-routing-runtime" }
ai-runtime-adapters = { path = "../ai-runtime-adapters" }

[lib]
name = "ai_service"
path = "src/lib.rs"
